TypeScript type fix and css tweak to remove body scrollbars

--- a/src/ui/styles/app.css
+++ b/src/ui/styles/app.css
@@ -15,6 +15,9 @@ html {
 
 body {
   background: linear-gradient(to top, #5d4157, #a8caba);
+
+  /* no scrollbars! */
+  overflow: hidden;
 }
 
 /* keep everything at full width and height */
